# streamsort

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  REQUIREMENTS.txt  api.py  cache.py  constants.py  db.py  errors.py  interaction.py  musictypes.py  pyproject.toml  sentences.py  setup.cfg  setup.py  sh.py  utilities.py
projects/: __init__.py  constants.py  sentences.py  utilities.py
shuffle/: __init__.py  sentences.py
streamsort/: __init__.py  __main__.py  _cache.py  _constants.py  _io.py  _sh.py  cache.py  constants.py  errors.py  interaction.py  musictypes.py  sentences.py  sh.py  types.py  utilities.py
