[metadata]
name = streamsort
version = 0.2.1a1
url = https://github.com/IdmFoundInHim/streamsort
author = IdmFoundInHim
author_email = idmfoundinhim@gmail.com
keywords = playlists music backup shuffle
classifiers = 
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Natural Language :: English
    Topic :: Multimedia :: Sound/Audio
    Typing :: Typed
license = MIT
description = Power tools for your playlists
long_description = file: README.md, LICENSE
long_description_content_type="text/markdown",

[options]
install_requires =  # Licenses
        requests >=2.22.0  # Apache
        spotipy ~=2.15  # MIT
        more-itertools >=8.0.0  # MIT
        frozendict >=2.0.0  # LGPL
python_requires = >=3.10
packages = find:
include_package_data = True

[options.package_data]
streamsort = README.md